src/objects/blng__Invoice__c.object
<CustomObject>
    <description>Storing the Invoices.</description>
    <fields>
        <fullName>Additional_Email_Recipients__c</fullName>
        <description>Pulls in emails from Account field &quot;Emails to Receive Invoices&quot;</description>
        <formula>blng__Account__r.Emails_to_Receive_Invoices__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Email Recipients</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_City_State_Zip__c</fullName>
        <formula>blng__BillToContact__r.MailingCity +&apos;, &apos;+ blng__BillToContact__r.MailingState + &apos; &apos; + blng__BillToContact__r.MailingPostalCode</formula>
        <label>Bill To City State Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Street__c</fullName>
        <formula>blng__BillToContact__r.MailingStreet</formula>
        <label>Bill To Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Email__c</fullName>
        <formula>blng__BillToContact__r.Email</formula>
        <label>Bill to Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Name__c</fullName>
        <formula>blng__BillToContact__r.FirstName + &apos; &apos; + blng__BillToContact__r.LastName</formula>
        <label>Bill to Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Workflow_Invoice__c</fullName>
        <description>##Conga updated btn:00b0Z000001yZ1C</description>
        <formula>IF ( Do_Not_Send__c == TRUE, &apos;&apos;,
IF ( Hard_Copy_Invoice__c == TRUE,
&quot;&amp;id=&quot; + Id +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;templateid= a0o2T000006F54c&quot; +
&quot;&amp;emailrelatedtoid=&quot; + Id +
&quot;&amp;emailtoid=&quot; + blng__BillToContact__c +
&quot;&amp;emailadditionalto=&quot; + Additional_Email_Recipients__c +
&quot;&amp;emailreplytoid= 0D22T000000k9fe&quot; +
&quot;&amp;reportid= 00O2T000006p6ma&quot; +
&quot;&amp;partnercode= 0015000000Yd8nM&quot; +
&quot;&amp;templategroup=invoice&quot; +
&quot;&amp;ds4=1&quot; +
&quot;&amp;fp0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;ofn=Meyers Invoice - &quot; + Invoice_Number__c +
&quot;&amp;qmode=Attachments&quot;,
&quot;&amp;id=&quot; + Id +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;templateid= a0o2T000006F54c&quot; +
&quot;&amp;emailrelatedtoid=&quot; + Id +
&quot;&amp;emailadditionalto=&quot; + Bill_to_Email__c + &quot;,&quot; + Additional_Email_Recipients__c +
&quot;&amp;EmailBCC=zondaaccounting@meyersresearchllc.com&quot; +
&quot;&amp;EmailCC=&quot; + blng__Account__r.Account_Owner_Email__c +
&quot;&amp;emailfromid= 0D22T000000k9fe&quot; +
&quot;&amp;reportid= 00O2T000006p6ma&quot; +
&quot;&amp;partnercode= 0015000000Yd8nM&quot; +
&quot;&amp;templategroup=invoice&quot; +
&quot;&amp;ds4=1&quot; +
&quot;&amp;fp0=1&quot; +
&quot;&amp;CongaEmailTemplateId= a0n2T000004wUy0&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;ofn=Meyers Invoice - &quot; + Invoice_Number__c +
&quot;&amp;qmode=SendEmail&quot;))</formula>
        <label>Conga Workflow Invoice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF(AND(ISPICKVAL(blng__InvoiceStatus__c, &quot;Posted&quot;),( blng__PaymentStatus__c = &quot;Paid&quot;), ISBLANK(blng__Account__r.Oldest_Invoice_Due_Date__c )) , Null ,Today()- blng__DueDate__c )</formula>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when the invoice should NOT be sent to the customer</inlineHelpText>
        <label>Do Not Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_for_Payment__c</fullName>
        <formula>IF( (Today()- blng__DueDate__c ) &gt;=45 &amp;&amp; (Today()- blng__DueDate__c ) &lt;=59,45, 
IF( (Today()- blng__DueDate__c ) &gt;=60 &amp;&amp; (Today()- blng__DueDate__c ) &lt;=74,60, 
IF( (Today()- blng__DueDate__c ) &gt;=75 &amp;&amp; (Today()- blng__DueDate__c ) &lt;=89,75, 
IF( (Today()- blng__DueDate__c ) &gt;=90 &amp;&amp; (Today()- blng__DueDate__c ) &lt;=104,90, 
IF( (Today()- blng__DueDate__c ) &gt;=105 &amp;&amp; (Today()- blng__DueDate__c ) &lt;=119,105, 
IF( (Today()- blng__DueDate__c ) &gt;=120 &amp;&amp; (Today()- blng__DueDate__c ) &lt;=134,120, 
IF( (Today()- blng__DueDate__c ) &gt;=135 &amp;&amp; (Today()- blng__DueDate__c ) &lt;=149,135, 
IF( (Today()- blng__DueDate__c ) &gt;=150 &amp;&amp; (Today()- blng__DueDate__c ) &lt;=164,150, 
IF( (Today()- blng__DueDate__c ) &gt;=165 &amp;&amp; (Today()- blng__DueDate__c ) &lt;=179,165, null)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due for Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hard_Copy_Invoice_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hard Copy Invoice set via Process Builder if the Hard Copy field changes on the account and the invoice has not been Posted</description>
        <label>Hard Copy Invoice Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hard_Copy_Invoice__c</fullName>
        <formula>Hard_Copy_Invoice_Account__c</formula>
        <inlineHelpText>Invoice Delivery Preference is Hard Copy -- From Account</inlineHelpText>
        <label>Hard Copy Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hard_Copy_Sent_Date__c</fullName>
        <label>Hard Copy Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Used to show the Legacy Meyers ID if it existed, if not then it shows the standard Invoice Number</description>
        <formula>IF(!ISBLANK(Legacy_Invoice_Number__c),Legacy_Invoice_Number__c,Name)</formula>
        <label>Invoice Number (Combined)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoices_Emailed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to prevent the emails from being sent during initial testing</description>
        <label>Invoices Emailed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Invoice_Number__c</fullName>
        <description>This is used to hold the Meyers Invoice Number.</description>
        <label>Legacy Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PaymentTerm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <formula>LOWER( Text( Payment_Term__c ) )</formula>
        <label>Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quickbooks_Invoice_Number__c</fullName>
        <externalId>true</externalId>
        <label>Quickbooks Invoice Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Auto_Set__c</fullName>
        <label>RSD (Auto Set)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD__c</fullName>
        <formula>RSD_Auto_Set__c</formula>
        <label>RSD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__ARStatus__c</fullName>
        <label>AR Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceARStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Account__c</fullName>
        <inlineHelpText>Lookup to the Account this invoice is billed to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>AccountInvoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceAction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Balance__c</fullName>
        <formula>blng__TotalAmount__c - blng__Payments__c - blng__Credits__c + blng__Debits__c + blng__NegativeLineConversion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Balance = Total Amount - Total Net Payments - Credit Notes Applied + Debit Notes Applied + Negative Line Conversions</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyAmount__c</fullName>
        <label>Base Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXDate__c</fullName>
        <label>Base Currency FX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXRate__c</fullName>
        <label>Base Currency FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrency__c</fullName>
        <label>Base Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Bill To contact for this invoice</inlineHelpText>
        <label>Bill To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices (BillToContact)</relationshipLabel>
        <relationshipName>BillToContactInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CorrectiveAction__c</fullName>
        <label>Corrective Action (Payment Run)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ActionRequired</fullName>
                    <label>Action Required</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Credits__c</fullName>
        <inlineHelpText>Sum of all credit note amounts applied to this invoice</inlineHelpText>
        <label>Credits</label>
        <summarizedField>blng__InvoiceLine__c.blng__Credits__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__DaysOutstanding__c</fullName>
        <formula>Today() - blng__DueDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__DebitPayments__c</fullName>
        <inlineHelpText>Sum of all payment allocations and unallocations against Debit Notes allocated to this invoice.</inlineHelpText>
        <label>Debit Payments</label>
        <summarizedField>blng__InvoiceLine__c.blng__DebitPayments__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Debits__c</fullName>
        <inlineHelpText>Sum of all debit note amounts applied to this invoice</inlineHelpText>
        <label>Debits</label>
        <summarizedField>blng__InvoiceLine__c.blng__Debits__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__DeclinedPaymentRunCount__c</fullName>
        <label>Declined Payment Count (Payment Run)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__DefaultPaymentType__c</fullName>
        <formula>IF( blng__PaymentMethod__c != NULL, TEXT(blng__PaymentMethod__r.blng__PaymentType__c)  , blng__Account__r.blng__DefaultPaymentType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__DueDate__c</fullName>
        <description>When is the last date of invoice to be paid.</description>
        <inlineHelpText>The date when payment for the invoice is due.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__ImpactAmount__c</fullName>
        <formula>blng__TotalAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceDate__c</fullName>
        <inlineHelpText>Drives the Due Date and financial reporting period</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__InvoicePostedDate__c</fullName>
        <inlineHelpText>The date on which the invoice was posted</inlineHelpText>
        <label>Invoice Posted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceRunCreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up relationship to the Invoice Run.Invoice is child of  Invoice Run.
This field tells from which Invoice Run the Invoice is generated.</description>
        <label>Invoice Run (Created By)</label>
        <referenceTo>blng__InvoiceRun__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>InvoiceRunInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceStatus__c</fullName>
        <description>Warning: Invoice Status is an internal field. Changing it could cause basic functionality to fail or become unstable.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__LastPaymentRunId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Payment Run</label>
        <referenceTo>blng__PaymentRun__c</referenceTo>
        <relationshipName>LastPaymentRun</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__LastPaymentRunProcessingMessage__c</fullName>
        <label>Last Payment Run Processing Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__NegativeLineConversion__c</fullName>
        <label>Negative Line Conversion</label>
        <summarizedField>blng__InvoiceLine__c.blng__NegativeLineConversion__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__NumberOfInvoiceLines__c</fullName>
        <label>Number Of Invoice Lines</label>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>OrderInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentBatch__c</fullName>
        <label>Payment Batch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceBatch</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__PaymentMethod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Autopay Payment Method</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__PaymentMethod__c.blng__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.blng__Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__PaymentMethod__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentProcessStatus__c</fullName>
        <inlineHelpText>This field will be deprecated in a future release</inlineHelpText>
        <label>Payment Process Status (deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PaymentRunStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__PaymentRunId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Run</label>
        <referenceTo>blng__PaymentRun__c</referenceTo>
        <relationshipName>PaymentRun</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentRunProcessingMessage__c</fullName>
        <label>Payment Run Processing Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__PaymentStatus__c</fullName>
        <formula>IF(
AND(blng__Balance__c &gt; 0, blng__Payments__c &gt; 0),
&apos;Partially Paid&apos;, IF(blng__Balance__c &gt; 0, &apos;Unpaid&apos;, &apos;Paid&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__PaymentsAgainstInvoiceLines__c</fullName>
        <inlineHelpText>Sum of payment amounts allocated to Invoice Lines in the Invoice.</inlineHelpText>
        <label>Allocations Against Invoice Lines</label>
        <summarizedField>blng__InvoiceLine__c.blng__PaymentsAgainstInvoiceLines__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__PaymentsAgainstInvoice__c</fullName>
        <inlineHelpText>Sum of Payment amounts allocated to the Invoice Header. Should only be used when not using line level allocations.</inlineHelpText>
        <label>Allocations Against Invoice</label>
        <summarizedField>blng__PaymentAllocationInvoice__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__PaymentAllocationInvoice__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__PaymentAllocationInvoice__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Payments__c</fullName>
        <formula>blng__PaymentsAgainstInvoice__c +  blng__PaymentsAgainstInvoiceLines__c - blng__RefundsAgainstInvoice__c - blng__RefundsAgainstInvoiceLines__c + blng__DebitPayments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net payments against this invoice</inlineHelpText>
        <label>Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RefundsAgainstInvoiceLines__c</fullName>
        <inlineHelpText>Cancellations of previous allocations to the Invoice Lines</inlineHelpText>
        <label>Unallocations Against Invoice Lines</label>
        <summarizedField>blng__InvoiceLine__c.blng__RefundsAgainstInvoiceLines__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__RefundsAgainstInvoice__c</fullName>
        <inlineHelpText>Cancellations of previous allocations to the Invoice</inlineHelpText>
        <label>Unallocations Against Invoice</label>
        <summarizedField>blng__PaymentAllocationInvoice__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__PaymentAllocationInvoice__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Unallocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__PaymentAllocationInvoice__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__StatusFlag__c</fullName>
        <description>Yellow - Invoices that are Active
Green - Invoices that have been Paid
Red - Invoices that are Overdue
White - Invoices that have been Cancelled</description>
        <formula>IF(ISPICKVAL(blng__InvoiceStatus__c, &apos;Cancelled&apos;),IMAGE(&quot;/resource/blng__images/Flag_white.gif&quot;, &quot;White&quot;),
IF((blng__Balance__c = 0), Image(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;) ,
     IF(TODAY() &gt;  blng__DueDate__c &amp;&amp; (blng__Balance__c &gt; 0),                                               
			Image(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;),
			Image(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow&quot;)
		)
))</formula>
        <inlineHelpText>Orange = active invoice with a balance;  Green = no balance due; Red = past due; White = canceled</inlineHelpText>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <inlineHelpText>Invoice total (excluding tax)</inlineHelpText>
        <label>Subtotal</label>
        <summarizedField>blng__InvoiceLine__c.blng__Subtotal__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TargetDate__c</fullName>
        <label>Target  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__TaxAmount__c</fullName>
        <inlineHelpText>Sum of all taxes for this invoice</inlineHelpText>
        <label>Tax</label>
        <summarizedField>blng__InvoiceLine__c.blng__TaxAmount__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TaxErrorMessage__c</fullName>
        <label>Tax Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxErrors__c</fullName>
        <label>Tax Errors</label>
        <summarizedField>blng__InvoiceLine__c.blng__TaxError__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TaxStatus__c</fullName>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__TaxStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TotalAmount__c</fullName>
        <inlineHelpText>Invoice total (including tax). Equals SubTotal + Tax.</inlineHelpText>
        <label>Total Amount (With Tax)</label>
        <summarizedField>blng__InvoiceLine__c.blng__TotalAmount__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__UniqueId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID for this invoice</inlineHelpText>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>Draft_Invoices</fullName>
        <columns>NAME</columns>
        <columns>blng__InvoiceDate__c</columns>
        <columns>blng__Account__c</columns>
        <columns>blng__TotalAmount__c</columns>
        <columns>Quickbooks_Invoice_Number__c</columns>
        <columns>blng__BillToContact__c</columns>
        <columns>Additional_Email_Recipients__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>blng__InvoiceStatus__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Draft Invoices</label>
    </listViews>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__Account__c</columns>
        <columns>blng__InvoiceDate__c</columns>
        <columns>blng__DueDate__c</columns>
        <columns>blng__StatusFlag__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Meyers_Id__c</columns>
        <columns>blng__InvoiceStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Invoices</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>blng__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>blng__Cancelled_Invoices</fullName>
        <columns>NAME</columns>
        <columns>blng__Account__c</columns>
        <columns>blng__InvoiceDate__c</columns>
        <columns>blng__InvoiceStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>blng__InvoiceStatus__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Cancelled Invoices</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>blng__Unpaid_Invoice_List</fullName>
        <columns>NAME</columns>
        <columns>blng__Account__c</columns>
        <columns>blng__DueDate__c</columns>
        <columns>blng__PaymentStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>blng__PaymentStatus__c</field>
            <operation>equals</operation>
            <value>Unpaid</value>
        </filters>
        <label>Unpaid Invoices</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>